| Bug #26814 | Bug in sendTCKEYFAIL_CONF/REF when sending to own node | ||
|---|---|---|---|
| Submitted: | 3 Mar 2007 2:51 | Modified: | 23 Mar 2007 8:23 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | drop6, and 6.2.* | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[3 Mar 2007 2:51]
Jonas Oreland
[3 Mar 2007 16:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21089 ChangeSet@1.2451, 2007-03-03 16:45:19+01:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#26814 Fix incorrect assertion when sending tckeyfailref/conf to dead db-node
[3 Mar 2007 16:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21090 ChangeSet@1.2115, 2007-03-03 16:48:11+01:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#26814 Fix incorrect assertion when sending tckeyfailref/conf to dead db-node
[20 Mar 2007 16:55]
Jonas Oreland
pushed to drop6 and 51-telco
[23 Mar 2007 8:23]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented fix in mysql-5.1.16-ndb-6.2.1 changelog.
