ndb - bug#26814   Fix incorrect assertion when sending tckeyfailref/conf to dead db-node